PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Improved *pel-show-fill-columns* (bound to ~<f11> t f ?~): it now shows the values of more user options
  inside a info buffer where you can get more information about each user-option and gain access to their customization buffer.
- Fix *pel-insert-symbol* function, used in all PEL info commands that print variable/user-option
  values and provide a button to customize the user option.  The new code ensures that the button
  describes the value for the proper buffer, not the info buffer (as it was previously doing).
- Add *pel-undo-info*, bound to ~<f11 u ?~.  It shows relevant user-options and variables controlling undo and redo.
- Add *pel-force-normal-erase-is-backspace-off-in-terminal* user-option that can be used to
  fix the behaviour of the delete key on Emacs running in terminal mode, specially on macOS systems.
- Add ~<f11> M-a~ key binding to *current-align*.
- Add *pel-replace-line-with-kill*, bound to ~<f11> C-y~ which replaces the current line
  with the last killed entry.  Use ~M-y~ as usual to replace it.
- Add *pel-ccp-info*, bound to ~<f11> - ?~, ~<f11> = ?~ and to ~<f11> DEL ?~.
  The command prints the current value of important customizable user-option variables that influence
  Emacs delete key behaviour as well as various kill, yank, cut and paste operations.
- Improved *pel-set-tab-width* and *pel-show-indent*:
  the new logic allows PEL to identify variables used by a major-mode
  to set the indentation width and the tab-width.  This information is
  used by these 2 commands to properly report the behaviour of indentation and tab width
  control.  It also allows pel-set-tab-width to set the indentation control variable of the major mode when the major mode uses
  such a variable.